# Platformer

./: CMakeLists.txt  README.md
res/shaders/: fSprite.glsl  fragment.glsl  vSprite.glsl  vertex.glsl
src/: main.cpp
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite2D.cpp  Sprite2D.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
